--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
+# Dependencies
 node_modules
+
+# Build output
 .next
+out
+dist
+
+# Environment variables
 .env
 .env*.local
-.DS_Store 
+
+# Development
+.DS_Store
+*.tsbuildinfo
+.claude
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+
+# Testing
+coverage
+.nyc_output
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
